--- a/feature-libs/asm/styles/components/_asm-customer-360.component.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-360.component.scss
@@ -8,40 +8,57 @@
   }
 
   .cx-dialog-header {
-    flex: none;
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-    .cx-avatar {
-      font-size: 56px;
-      width: 110px;
-      height: 110px;
-      line-height: 100px;
-      border-radius: 50%;
-      color: #fff;
-      text-align: center;
-      background: #9259cd;
-      text-transform: uppercase;
-      margin-top: 2px;
-      margin-inline-end: 10px;
-      margin-bottom: 2px;
-      margin-inline-start: 0;
+    flex-direction: column;
+    padding: 2rem;
+    .header-title {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      h3 {
+        font-weight: var(--cx-font-weight-semi);
+        color: $asmMainTextColor;
+      }
     }
-    .cx-title {
-      font-size: 2rem;
-      line-height: 2;
-    }
-    .cx-customer-info {
-      margin-left: -150px;
-      .cx-customer-email {
-        color: var(--cx-color-visual-focus);
-        font-size: 15px;
-        margin-top: -7px;
+    .header-content {
+      width: 100%;
+      margin: 37px 0 0 0;
+      .header-content-container {
+        display: flex;
+        justify-content: space-between;
+        .login-info {
+          font-size: 0.875rem;
+          font-weight: var(--cx-font-weight-normal);
+          color: $asmMainSecondaryTextColor;
+        }
+      }
+      .cx-customer-info-container {
+        display: flex;
+        .cx-avatar {
+          font-size: 18px;
+          width: 48px;
+          height: 48px;
+          line-height: 48px;
+          border-radius: 50%;
+          color: #fff;
+          text-align: center;
+          background: #9259cd;
+          text-transform: uppercase;
+        }
+        .cx-customer-info {
+          .cx-customer-name {
+            color: $asmMainTextColor;
+            font-weight: var(--cx-font-weight-bold);
+          }
+          .cx-customer-email {
+            color: $asmVisualFocusColor;
+            font-size: 0.875rem;
+          }
+        }
       }
     }
     .close {
-      font-size: 1rem;
+      font-size: 1.5rem;
       color: var(--cx-color-dark);
-      top: -100px;
     }
   }
   .cx-dialog-body {
@@ -57,32 +74,32 @@
     .cx-tab-container {
       display: flex;
       flex-direction: row;
-      margin-top: 20px;
+      margin-top: 2rem;
       overflow-x: auto;
+      border-bottom: 1px solid #dddddd;
+      padding-inline-start: 2rem;
     }
     .cx-tab {
-      flex: 1;
       text-align: center;
-      color: var(--cx-color-light);
-      border-bottom: 1px solid #dddddd;
-      padding: 0 8px 8px;
+      color: $asmTabTextColor;
+      font-weight: var(--cx-font-weight-semi);
+      border-bottom: 1px solid white;
+      padding: 0 1rem 1rem;
       cursor: pointer;
       &.active {
         cursor: default;
       }
       &:hover {
-        border-color: #556b82;
-        color: var(--cx-color-visual-focus);
-        border-width: 0 0 2px;
+        color: $asmVisualFocusColor;
         text-decoration: none;
+        border-bottom: 1px solid $asmVisualFocusColor;
       }
       &:active,
       &:hover,
       &:focus {
-        color: var(--cx-color-visual-focus);
-        border-width: 0 0 2px;
+        color: $asmVisualFocusColor;
         text-decoration: none;
-        border-color: var(--cx-color-visual-focus);
+        border-bottom: 1px solid $asmVisualFocusColor;
       }
     }
     .cx-tab-content {
@@ -92,15 +109,13 @@
       padding: 0 0 28px;
     }
     .active {
-      color: var(--cx-color-visual-focus);
-      border-width: 0 0 2px;
+      color: $asmVisualFocusColor;
       text-decoration: none;
-      border-color: var(--cx-color-visual-focus);
+      border-bottom: 1px solid $asmVisualFocusColor;
       &:hover {
-        color: var(--cx-color-visual-focus);
-        border-width: 0 0 2px;
+        color: $asmVisualFocusColor;
         text-decoration: none;
-        border-color: var(--cx-color-visual-focus);
+        border-bottom: 1px solid $asmVisualFocusColor;
       }
     }
   }
