--- a/feature-libs/asm/styles/components/_asm-customer-overview.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-overview.scss
@@ -3,6 +3,7 @@
   .cx-overview-title-link {
     text-decoration: none;
     cursor: pointer;
+    color: $asmLinkColor;
   }
   .cx-asm-overview-header-infor {
     display: flex;
@@ -47,99 +48,139 @@
       text-transform: uppercase;
     }
   }
-  .section-header {
-    align-items: center;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin-bottom: 16px;
+  .cx-asm-overview-section {
+    display: block;
+    padding: 0 48px;
+    .section-header {
+      align-items: center;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      .header-title {
+        @include type('4', 'semi');
+      }
+      .result-wrapper {
+        display: flex;
+      }
+    }
+    .cart {
+      &-divider {
+        border-right: 1px solid #AFAFAF;
+        height: 20px;
+      }
 
-    h3 {
-      margin-bottom: 0;
+      &-total-no-items,
+      &-total-price {
+        @include type('6', 'normal');
+        color: var(--cx-color-secondary);
+        padding: 0 16px;
+      }
+    }
+    .cx-asm-overview-items {
+      display: flex;
+      a {
+        cursor: pointer;
+      }
+      .cx-asm-product-item-name {
+        @include type('7', 'bold');
+        color: $asmMainTextColor;
+        text-decoration: none;
+        span {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          display: inline-block;
+        }
+        &:hover {
+          color: var(--cx-color-primary);
+        }
+      }
+      .cx-asm-overview-out-of-stock {
+        font-weight: var(--cx-font-weight-normal);
+        color: var(--cx-color-secondary);
+      }
+    }
+    .cx-asm-overview-items.show-more {
+      flex-wrap: wrap;
+    }
+    .cx-asm-overview-order-items.column-1 {
+      cx-asm-product-item {
+        width: 100%;
+      }
+    }
+    .cx-asm-overview-order-items.column-2 {
+      cx-asm-product-item {
+        width: 50%;
+      }
+    }
+    .cx-asm-overview-order-items.column-3 {
+      cx-asm-product-item {
+        width: 32%;
+      }
+    }
+    .cx-asm-overview-order-items {
+      gap: 1rem;
+      cx-asm-product-item {
+        border: 1px solid var(--cx-color-light);
+        border-radius: 10px;
+        max-width: 330px;
+        cx-media {
+          width: 100px;
+          img {
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+          }
+        }
+        .cx-asm-product-item-content {
+          padding: 1rem;
+          span {
+            width: 160px;
+          }
+        }
+      }
+    }
+
+    .cx-asm-overview-interests-items {
       text-align: center;
-      width: 100%;
+      gap: 1rem;
+      cx-asm-product-item {
+        width: 140px;
+        flex-direction: column;
+        row-gap: 1rem;
+        cx-media {
+          max-width: 140px;
+          height: 140px;
+        }
+        .cx-asm-product-item-content {
+          span {
+            width: 140px;
+          }
+        }
+      }
     }
   }
-  .cart {
-    &-divider {
-      border-right: 1px solid #e1e7ee;
-      height: 20px;
-    }
-
-    &-total-no-items,
-    &-total-price {
-      padding: 0 16px;
-    }
-  }
-  .cx-asm-overview-items {
+  .show-hide-container {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    a {
-      cursor: pointer;
-    }
-    .cx-overview-product-name {
-      @include type('5');
-      color: var(--cx-color-dark);
+    justify-content: center;
+    .show-hide-btn {
+      color: $asmLinkColor;
+      @include type('4', 'semi');
       text-decoration: none;
-      span {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        display: inline-block;
-      }
-      &:hover {
-        color: var(--cx-color-primary);
-      }
-    }
-    .cx-overview-out-of-stock {
-      font-weight: var(--cx-font-weight-normal);
-      color: var(--cx-color-secondary);
-    }
-  }
-  .cx-asm-overview-order-items {
-    gap: 1rem;
-    cx-asm-product-item {
-      border: 1px solid var(--cx-color-light);
-      width: 300px;
-      cx-media {
-        width: 100px;
-      }
-      .asm-product-item-content {
-        padding: 1rem;
-        span {
-          width: 180px;
-        }
-      }
     }
   }
 
-  .cx-asm-overview-interests-items {
-    text-align: center;
-    gap: 1rem;
-    cx-asm-product-item {
-      width: 150px;
-      flex-direction: column;
-      row-gap: 0.5rem;
-      cx-media {
-        max-width: 150px;
-        height: 150px;
-      }
-      .asm-product-item-content {
-        span {
-          width: 150px;
-        }
-      }
-    }
-  }
-
-  .cx-overview-empty {
-    .cx-overview-empty-title {
-      @include type('5');
-      font-weight: var(--cx-font-weight-normal);
-      line-height: var(--cx-line-height, 1.5);
+  .cx-asm-overview-empty {
+    display: block;
+    padding: 0 48px;
+    .cx-asm-overview-empty-title {
+      @include type('4', 'semi');
+      line-height: 2rem;
       border-bottom: 1px solid var(--cx-color-light);
     }
-    .cx-overview-empty-desc {
+    .cx-asm-overview-empty-desc {
+      color: $asmMainSecondaryTextColor;
       font-size: var(--cx-font-size, 0.875rem);
       font-weight: var(--cx-font-weight-normal);
     }
