--- a/feature-libs/asm/components/asm-customer-360/asm-customer-profile/asm-customer-profile.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-profile/asm-customer-profile.component.html
@@ -1,9 +1,14 @@
-<div class="container cx-asm-customer-profile">
+<div class="cx-asm-customer-profile">
   <ng-container *ngIf="customerProfileData$ | async as customerProfileData">
     <div>
       <div class="row">
         <div class="col">
-          <div class="cx-asm-profile-header">
+          <h4 class="mt-3 pt-3 mb-4">Address</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="cx-asm-profile-subheader">
             {{ 'asm.profileAddresses.billingAddress' | cxTranslate }}
           </div>
           <div class="cx-asm-profile-container">
@@ -16,7 +21,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="cx-asm-profile-header">
+          <div class="cx-asm-profile-subheader">
             {{ 'asm.profileAddresses.deliveryAddress' | cxTranslate }}
           </div>
           <div class="cx-asm-profile-container">
@@ -30,7 +35,7 @@
         </div>
         <div class="w-100 d-lg-none"></div>
         <div class="col">
-          <div class="cx-asm-profile-header">
+          <div class="cx-asm-profile-subheader">
             {{ 'asm.profileAddresses.phone1' | cxTranslate }}
           </div>
           <div class="cx-asm-profile-container">
@@ -38,7 +43,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="cx-asm-profile-header">
+          <div class="cx-asm-profile-subheader">
             {{ 'asm.profileAddresses.phone2' | cxTranslate }}
           </div>
           <div class="cx-asm-profile-container">
@@ -47,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="cx-asm-profile-header">
+    <div class="cx-asm-profile-subheader mt-4">
       {{ 'asm.profileAddresses.paymentMethodHeader' | cxTranslate }}
     </div>
     <div class="cx-asm-profile-cards">
