Task/asm 360 data layer (#16224)
* Refactoring AsmCustomerTable so that all logic is out of the data model fragments and into the component itself

* AsmCustomerTable needs to link to certain pages

* WIP: Refactoring AsmCustomerListing component to have logic separate from its data. Search function is missing

* WIP:
360 modal is not created statically; tabs are created dynamically via configuration. Data is passed through Injectables - a CustomerContextSource and Customer360SectionConfig.
Moving potential 360 sections into their own components folder.

* Creating SupportTickets and ProductReviews components and deleting Feedback component

* Tab name config should be a translation key, not just a configurable string

* WIP: Implementing mock HTTP request/response for the 360 customer modal. Using NgRX to implement fetching the data. Have some questions on what data is supposed to be sent back by the backend/what is needed for the FE.

* WIP: Maps section uses mock ASM 360 response

* WIP: Lint fix and cleanup. Still need to properly implement extending the data layer

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -4,10 +4,10 @@
     <div class="cx-dialog-header modal-header">
       <div class="header-title">
         <h3 id="asm-customer-360-title" class="modal-title">
-          {{ 'asm.customer360.title' | cxTranslate }}
+          {{ 'asm.customer360.header.title' | cxTranslate }}
         </h3>
         <div id="asm-customer-360-desc" class="cx-visually-hidden">
-          {{ 'asm.customer360.title' | cxTranslate }}
+          {{ 'asm.customer360.header.title' | cxTranslate }}
         </div>
         <ng-template *ngTemplateOutlet="closeButton"></ng-template>
       </div>
@@ -20,7 +20,7 @@
             <div class="cx-customer-info ml-3">
               <div class="cx-customer-name">
                 {{
-                  'asm.customer360.subTitle'
+                  'asm.customer360.header.subTitle'
                     | cxTranslate: { name: customer.firstName }
                 }}
               </div>
@@ -45,35 +45,21 @@
               (click)="selectTab(i)"
               [class.active]="activeTab === i"
             >
-              {{ getTabTitle(tab.sectionTitle) | async }}
+              {{ tab.i18nNameKey | cxTranslate }}
             </a>
           </div>
         </div>
       </div>
       <div class="cx-tab-content modal-body">
-        <ng-container [ngSwitch]="activeTab">
-          <cx-asm-customer-overview
-            *ngSwitchCase="0"
-            [customer]="customer"
-            (navigate)="navigateTo($event)"
-          ></cx-asm-customer-overview>
-          <cx-asm-customer-profile
-            *ngSwitchCase="1"
-            [customer]="customer"
-          ></cx-asm-customer-profile>
-          <cx-asm-customer-activity
-            *ngSwitchCase="2"
-          ></cx-asm-customer-activity>
-          <cx-asm-customer-feedback
-            *ngSwitchCase="3"
-          ></cx-asm-customer-feedback>
-          <cx-asm-customer-promotions
-            *ngSwitchCase="4"
-          ></cx-asm-customer-promotions>
-          <cx-asm-customer-map *ngSwitchCase="5"></cx-asm-customer-map>
-          <span *ngSwitchDefault>
-            {{ getActiveTabContent() }}
-          </span>
+        <ng-container
+          *ngFor="let config of currentTab.components; let i = index"
+        >
+          <ng-container
+            *ngComponentOutlet="
+              config.component;
+              injector: injectors[activeTab][i]
+            "
+          ></ng-container>
         </ng-container>
       </div>
     </div>
