--- a/feature-libs/asm/styles/_asm-variables.scss
+++ b/feature-libs/asm/styles/_asm-variables.scss
@@ -1,5 +1,5 @@
 $asmLinkColor: #2480c5;
-$asmVisualFocusColor: #0070F2;
+$asmVisualFocusColor: #0070f2;
 $asmMainTextColor: #14293a;
 $asmMainSecondaryTextColor: #747881;
-$asmTabTextColor: #333333
+$asmTabTextColor: #333333;
