--- a/feature-libs/asm/styles/components/_asm-customer-overview.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-overview.scss
@@ -66,7 +66,7 @@
     }
     .cart {
       &-divider {
-        border-right: 1px solid #AFAFAF;
+        border-right: 1px solid #afafaf;
         height: 20px;
       }
 
