Reverting accidentally changed code from rebase resolve

--- a/feature-libs/asm/components/customer-emulation/customer-emulation.component.html
+++ b/feature-libs/asm/components/customer-emulation/customer-emulation.component.html
@@ -5,11 +5,7 @@
   </div>
   <cx-asm-bind-cart></cx-asm-bind-cart>
   <button class="cx-360-button" (click)="openCustomer360()">Customer360</button>
-  <button
-    class="cx-logout-button"
-    formcontrolname="logoutCustomer"
-    (click)="logoutCustomer()"
-  >
+  <button formcontrolname="logoutCustomer" (click)="logoutCustomer()">
     {{ 'asm.endSession' | cxTranslate }}
   </button>
 </ng-container>
