WIP: Instead of importing customer classes directly to AsmConfig, we will use the CMS mapping system to load components by their name. Currently supporting Overview and Profile components

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -55,11 +55,20 @@
           *ngFor="let config of currentTab?.components; let i = index"
         >
           <ng-container
+            [cxComponentWrapper]="{
+              flexType: config.component,
+              typeCode: config.component,
+              uid: ''
+            }"
+          ></ng-container>
+          <!--
+          <ng-container
             *ngComponentOutlet="
               config.component;
               injector: injectors[activeTab][i]
             "
           ></ng-container>
+          -->
         </ng-container>
       </div>
     </div>
